2003-04-09  Larry Ewing  <lewing@ximian.com>

	* editor-control-factory.c (editor_init_painters): use the gdk painter
	directly rather than the prop 
	(editor_set_format): copy the default fonts back since they may
	have changed dues to style changes.
	(editor_init_painters): call ensure_style to make sure the colors
	and fonts are valid.

2003-04-09  Radek Doulik  <rodo@ximian.com>

	* spell.c: use html_engine_get_language

	* popup.c: use html_engine_get_language

	* editor-control-factory.c: removed static from struct declaration
	(to quiet compiler)

2003-04-04  Larry Ewing  <lewing@ximian.com>

	* editor-control-factory.c (html_button_pressed): revert the
	previous change

2003-04-04  Larry Ewing  <lewing@ximian.com>

	* editor-control-factory.c (html_button_pressed): always do the
	editor popup and never disable the selection.  This matches how
	the gtk text widgets do popup editing better.

2003-04-03  Larry Ewing  <lewing@ximian.com>

	* popup.c (prepare_properties_and_menu): use stock undo/redo
	cut/copy/paste.

	* GNOME_GtkHTML_Editor.xml.in: use stock icons.

	* Makefile.am: fix spell idl depends.

2003-04-03  Rodney Dawes  <dobey@ximian.com>

	* Makefile.am: Fix shlib support and idl dependencies
	* editor-control-factory.c: Don't need conditional shlib stuff here
	* editor-control-factory.h: Prototype editor_control_factory here
	* editor-control-shlib.c: Add source file for the shlib factory
	* gnome-gtkhtml-editor.c: N conditional shlib support and use the
	new public prototype for editor_control_factory
	
2003-04-03  Larry Ewing  <lewing@ximian.com>

	* Makefile.am: Fix idl depends.

2003-04-01  Larry Ewing  <lewing@ximian.com>

	* editor-control-factory.c (activate_cb): add activate callback.

	* test-html-editor-control.c (main): init libgnomeui so that we
	get the indent icons.

	* menubar.c: make the verbs static, shlibs don't like globals.

2003-03-30  Larry Ewing  <lewing@ximian.com>
